spelshop lookup + queenofgames lookup + abstracting common code

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,5 @@
 </ion-header>
 
 <ion-content padding>
-  <lotana-lookup></lotana-lookup>
+  <queen-of-games-lookup></queen-of-games-lookup>
 </ion-content>
