--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,5 @@
 </ion-header>
 
 <ion-content padding>
-  <queen-of-games-lookup></queen-of-games-lookup>
+  <spelonk-lookup></spelonk-lookup>
 </ion-content>
