wishlist detail page

--- a/src/pages/add-to-wishlist/add-to-wishlist.html
+++ b/src/pages/add-to-wishlist/add-to-wishlist.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-navbar >
+    <ion-title>Add to wishlist</ion-title>
+  </ion-navbar>
+</ion-header>
+
 <ion-content padding>
   <ion-card>
     <ion-card-header>
@@ -19,3 +25,4 @@
   <spelonk-lookup *ngIf="stage === 3" [initWithLookup]="gameNameInput" (gameSelected)="handleSelection($event)"></spelonk-lookup>
   <add-to-wishlist-final *ngIf="stage === 4" [selection]="selection"></add-to-wishlist-final>
 </ion-content>
+
