--- a/src/pages/wishlist/wishlist.html
+++ b/src/pages/wishlist/wishlist.html
@@ -29,7 +29,7 @@
         </ion-thumbnail>
         <h2>{{wishlistItem.order+1}}. </h2>
         <p class="head-text-wrap">{{wishlistItem.displayName}}</p>
-        <button *ngIf="!reorderModeEnabled" ion-button clear item-end>View</button>
+        <button *ngIf="!reorderModeEnabled" (click)="goToDetail(wishlistItem.technicalId)" ion-button clear item-end>View</button>
       </ion-item>
     </ion-item-group>
   </ion-list>
